exports[`Onboarding should render different components 1`] = `
<div
  className="wizard welcome">
  <div
    className="wizard-main">
    <div
      className="logo-wrapper">
      <div
        className="cozy-logo-white" />
    </div>
    <h1
      className="title" />
    <h1
      className="title" />
  </div>
  <footer
    className="wizard-footer">
    <button
      className="coz-btn coz-btn--regular"
      onClick={[Function]}
      role="button" />
    <a
      className="link"
      href="#" />
  </footer>
</div>
`;

exports[`Onboarding should render different components 2`] = `
<div
  className="wizard select-server">
  <header
    className="wizard-header">
    <a
      className="close-button"
      onClick={undefined} />
  </header>
  <div
    className="wizard-main">
    <div
      className="logo-wrapper">
      <div
        className="cozy-logo-white" />
    </div>
    <input
      className="input"
      onChange={undefined}
      placeholder={undefined}
      type="url"
      value={undefined} />
    <p
      className="description" />
  </div>
  <footer
    className="wizard-footer">
    <button
      className="coz-btn coz-btn--regular"
      disabled={true}
      onClick={[Function]}
      role="button" />
  </footer>
</div>
`;

exports[`Onboarding should render the Analytics screen 1`] = `
<div
  className="wizard analytics">
  <header
    className="wizard-header">
    <a
      className="skipLink"
      onClick={undefined} />
  </header>
  <div
    className="wizard-main">
    <div
      className="illustration illustration-trophy" />
    <h1
      className="title" />
    <p
      className="description" />
  </div>
  <footer
    className="wizard-footer">
    <button
      className="coz-btn coz-btn--regular"
      onClick={undefined}
      role="button" />
    <div
      className="onboarding-breadcrumb">
      <div
        className="onboarding-breadcrumb-element" />
      <div
        className="onboarding-breadcrumb-element-active" />
    </div>
  </footer>
</div>
`;

exports[`Onboarding should render the BackupPhotosVideos screen 1`] = `
<div
  className="wizard photos-backup">
  <header
    className="wizard-header">
    <a
      className="skipLink"
      onClick={undefined} />
  </header>
  <div
    className="wizard-main">
    <div
      className="illustration illustration-photos" />
    <h1
      className="title" />
    <p
      className="description" />
  </div>
  <footer
    className="wizard-footer">
    <button
      className="coz-btn coz-btn--regular"
      onClick={undefined}
      role="button" />
    <div
      className="onboarding-breadcrumb">
      <div
        className="onboarding-breadcrumb-element-active" />
      <div
        className="onboarding-breadcrumb-element" />
    </div>
  </footer>
</div>
`;

exports[`Onboarding should render the SelectServer screen 1`] = `
<div
  className="wizard select-server">
  <header
    className="wizard-header">
    <a
      className="close-button"
      onClick={undefined} />
  </header>
  <div
    className="wizard-main">
    <div
      className="logo-wrapper">
      <div
        className="cozy-logo-white" />
    </div>
    <input
      className="input"
      onChange={undefined}
      placeholder={undefined}
      type="url"
      value={undefined} />
    <p
      className="description" />
  </div>
  <footer
    className="wizard-footer">
    <button
      className="coz-btn coz-btn--regular"
      disabled={true}
      onClick={[Function]}
      role="button" />
  </footer>
</div>
`;

exports[`Onboarding should render the welcome screen 1`] = `
<div
  className="wizard welcome">
  <div
    className="wizard-main">
    <div
      className="logo-wrapper">
      <div
        className="cozy-logo-white" />
    </div>
    <h1
      className="title" />
    <h1
      className="title" />
  </div>
  <footer
    className="wizard-footer">
    <button
      className="coz-btn coz-btn--regular"
      onClick={undefined}
      role="button" />
    <a
      className="link"
      href="#" />
  </footer>
</div>
`;
